--- a/Views/Pie/List.cshtml
+++ b/Views/Pie/List.cshtml
@@ -1,13 +1,12 @@
-@using MVCAppModels
-@model IEnumerable<Pie>
+@model MVCAppViewModels.PieListViewModel
 <!DOCTYPE html>
 <html>
     <head>
         <title>Bethany's Pie Shop</title>
     </head>
     <body>
-        <h1>@ViewBag.CurrentCategory</h1>
-        @foreach(var pie in Model){
+        <h1>@Model.CurrentCategory</h1>
+        @foreach(var pie in Model.Pies){
             <div>
                 <h2>@pie.Name</h2>
                 <h3>@pie.Price.ToString()</h3>
